Fix Dashboard Margin Top On Mobile

--- a/static/css/buff.css
+++ b/static/css/buff.css
@@ -303,7 +303,7 @@ div.about-desc img {
 
 @media screen and (max-width: 760px) {
     #main {
-        margin-top: 102px;
+        margin-top: 132px;
     }
 }
 
